fix spacing

--- a/apps/web/src/components/Testimonial/Testimonial.module.scss
+++ b/apps/web/src/components/Testimonial/Testimonial.module.scss
@@ -61,6 +61,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 16px;
 
     .quote {
       align-self: flex-start;
